[BE] Add cross-device account link intents
